--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -129,7 +129,7 @@ $font-size: 14px;
       color: #fff;
       transform: scale(0);
       transform-origin: 0 0;
-      animation: bounce 500ms linear both;
+      @include prefix-animation(bounce 500ms linear both);
       margin-top: 15px;
     }
     &.loading {
@@ -137,7 +137,7 @@ $font-size: 14px;
       &::before {
         @include ball;
         border: none;
-        animation-delay: .15s;
+        @include prefix-animation-delay(.15s);
       }
       span {
         display: block;
@@ -152,7 +152,7 @@ $font-size: 14px;
         &::after {
           @include ball;
           margin-left: 7px;
-          animation-delay: .3s;
+          @include prefix-animation-delay(.3s);
         }
       }
     }
