--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -133,21 +133,21 @@
 
 // =====================================================================================================================
 @mixin center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    @include prefix-transform(translate(-50%, -50%));
 }
 
 @mixin ball {
-  @include center;
-  content: '';
-  display: block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, .5);
-  z-index: 2;
-  margin-top: 4px;
-  animation: ball .45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+    @include center;
+    content: '';
+    display: block;
+    width: 3px;
+    height: 3px;
+    @include prefix-border-radius(50%);
+    background: rgba(255, 255, 255, .5);
+    z-index: 2;
+    margin-top: 4px;
+    @include prefix-animation(ball .45s cubic-bezier(0, 0, 0.15, 1) alternate infinite);
 }
