--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -1,17 +1,7 @@
-$font-size: 14px;
-
 /*--------------------Chat--------------------*/
 
 #chat {
-  min-width: 320px;
-  min-height: 568px;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  overflow: hidden;
-  box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
-  background: rgb(0, 142, 255);
-  @include prefix-border-radius(0 10px 0 0);
+  @include parent;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -186,8 +176,8 @@ $font-size: 14px;
   #message-submit {
     position: absolute;
     z-index: 1;
-    top: 9px;
-    right: 10px;
+    top: 12px;
+    right: 25px;
     color: #fff;
     border: none;
     background: #248A52;
