--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -151,3 +151,12 @@
     margin-top: 4px;
     @include prefix-animation(ball .45s cubic-bezier(0, 0, 0.15, 1) alternate infinite);
 }
+
+@mixin parent {
+    width: 100%;
+    height: 100%;
+    @include prefix-border-radius(10px 10px 0 0);
+    background: $brand-color;
+    overflow: hidden;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
+}
