--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -159,4 +159,7 @@
     background: $brand-color;
     overflow: hidden;
     box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
+    position: fixed;
+    top: 0;
+    left: 0;
 }
