--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -155,7 +155,7 @@
 @mixin parent {
     width: 100%;
     height: 100%;
-    @include prefix-border-radius(10px 10px 0 0);
+    @include prefix-border-radius(10px 10px 10px 10px);
     background: $brand-color;
     overflow: hidden;
     box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
