--- a/scss/state.scss
+++ b/scss/state.scss
@@ -103,7 +103,7 @@
             padding-top: 5px;
             background: rgba(0, 0, 0, 0.2);
         }
-        .content {
+        .container {
             height: 90%;
             overflow-x: hidden;
             overflow-y: scroll;
