--- a/scss/message.scss
+++ b/scss/message.scss
@@ -45,9 +45,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 101%;
+    height: 100%;
     width: 100%;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
   .message {
     clear: both;
